app/src/containers/Popup/PopupWidget/PopupWidget.scss
.torus-widget {
  position: absolute;
  --positionWidth: 0px;
  &.login-dialog {
    --positionWidth: 34px;
  }
  &.top-left {
    top: var(--positionWidth);
    left: var(--positionWidth);
  }
  &.top-right {
    top: var(--positionWidth);
    right: var(--positionWidth);
  }
  &.bottom-right {
    bottom: var(--positionWidth);
    right: var(--positionWidth);
  }
  &.bottom-left {
    bottom: var(--positionWidth);
    left: var(--positionWidth);
  }

  &__login-btn {
    border-radius: 28px;
    .torus-widget__login {
      display: block;
    }
    .torus-widget__login-with {
      display: none;
      line-height: 0;
      font-weight: 700;
    }
    &:hover {
      .torus-widget__login {
        display: none;
      }
      .torus-widget__login-with {
        display: block;
      }
    }
  }

  &__logo {
    max-width: 25px;
    max-height: 25px;
  }

  &__login {
    max-width: 30px;
    max-height: 30px;
  }

  &__panel {
    position: absolute;
    bottom: 25px;
    left: 25px;
    width: 330px;
    max-width: inherit;
    background: #ffffff;
    border: 1px solid #f2f2f2;
    box-sizing: border-box;
    box-shadow: 0px 14px 28px rgba(46, 91, 255, 0.06);
    border-radius: 12px;
  }

  &__user-details {
    background: #ffffff;
    box-shadow: 5px 5px 10px rgba(208, 218, 254, 0.25), -5px -5px 10px #fafbff;
    border-radius: 3px;
    margin-left: 20px;
    padding: 10px 0;

    .avatar-container {
      padding: 2px;
      border: 2px solid #b3c0ce;
      border-radius: 50%;
      background-color: #ffffff;
      margin-left: -20px;
    }
  }

  .details-container {
    width: 100%;
    &__icon {
      height: 12px;
      width: 12px;
    }
    &__text {
      font-size: 14px;
      line-height: 16px;
      color: #5c6c7f;
    }
  }

  &__amount-details {
    > div {
      line-height: 1em;
    }
    .amount {
      font-size: 18px;
      color: #7f8fa4;
      font-weight: bold;
    }
    .v-btn:not(.v-btn--flat):not(.v-btn--text):not(.v-btn--outlined) {
      border: 1px solid rgba(206, 208, 214, 0.3);
      background-color: white;
      color: #7f8fa4;
    }
  }

  &__transaction-details {
    .avatar-container {
      border: 1px solid #b3c0ce;
      border-radius: 50%;
    }
    .caption {
      color: #b3c0ce;
    }
  }
}

